EARTH-1021: fixing event spacing again

--- a/scss/theme/stanford-event/stanford-event.scss
+++ b/scss/theme/stanford-event/stanford-event.scss
@@ -95,12 +95,13 @@
   height: 50px;
   line-height: 50px;
   margin: 10px auto 20px auto;
+  padding-bottom: 0;
   width: 250px;
 
   @include grid-media($media-lg) {
-    margin: 10px 0 20px 0;
+    height: 100px;
+    margin: 0;
   }
-
 }
 
 .email-popup {
